crates/backyard-parser/tests/snapshots/consts__basic.snap
---
source: crates/backyard-parser/tests/consts.rs
expression: asts
snapshot_kind: text
---
leadings: []
trailings: []
node_type: program
children:
  - leadings: []
    trailings: []
    node_type: const
    items:
      - leadings: []
        trailings: []
        node_type: assignment
        left:
          leadings: []
          trailings: []
          node_type: identifier
          name: A
          loc:
            start:
              line: 1
              column: 6
              offset: 6
            end:
              line: 1
              column: 7
              offset: 7
        operator: "="
        right:
          leadings: []
          trailings: []
          node_type: number
          value: "1"
          loc:
            start:
              line: 1
              column: 10
              offset: 10
            end:
              line: 1
              column: 10
              offset: 10
        loc:
          start:
            line: 1
            column: 8
            offset: 8
          end:
            line: 1
            column: 10
            offset: 10
      - leadings: []
        trailings: []
        node_type: assignment
        left:
          leadings: []
          trailings: []
          node_type: identifier
          name: B
          loc:
            start:
              line: 1
              column: 13
              offset: 13
            end:
              line: 1
              column: 14
              offset: 14
        operator: "="
        right:
          leadings: []
          trailings: []
          node_type: number
          value: "2"
          loc:
            start:
              line: 1
              column: 17
              offset: 17
            end:
              line: 1
              column: 17
              offset: 17
        loc:
          start:
            line: 1
            column: 15
            offset: 15
          end:
            line: 1
            column: 17
            offset: 17
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 17
        offset: 17
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 18
    offset: 18
