crates/backyard-parser/tests/snapshots/consts__property.snap
---
source: crates/backyard-parser/tests/consts.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: class
    inheritance: ~
    name:
      node_type: identifier
      name:
        - 65
      loc:
        start:
          line: 1
          column: 6
          offset: 6
        end:
          line: 1
          column: 7
          offset: 7
      leadings: ~
      trailings: ~
    extends: ~
    implements: []
    body:
      node_type: block
      statements:
        - node_type: const_property
          const_type: ~
          visibilities:
            - Public
            - PrivateSet
          items:
            - node_type: assignment
              left:
                node_type: identifier
                name:
                  - 65
                loc:
                  start:
                    line: 1
                    column: 36
                    offset: 36
                  end:
                    line: 1
                    column: 37
                    offset: 37
                leadings: ~
                trailings: ~
              operator: Default
              right:
                node_type: number
                value:
                  - 49
                loc:
                  start:
                    line: 1
                    column: 40
                    offset: 40
                  end:
                    line: 1
                    column: 40
                    offset: 40
                leadings: ~
                trailings: ~
              loc:
                start:
                  line: 1
                  column: 38
                  offset: 38
                end:
                  line: 1
                  column: 40
                  offset: 40
              leadings: ~
              trailings: ~
            - node_type: assignment
              left:
                node_type: identifier
                name:
                  - 66
                loc:
                  start:
                    line: 1
                    column: 43
                    offset: 43
                  end:
                    line: 1
                    column: 44
                    offset: 44
                leadings: ~
                trailings: ~
              operator: Default
              right:
                node_type: number
                value:
                  - 50
                loc:
                  start:
                    line: 1
                    column: 47
                    offset: 47
                  end:
                    line: 1
                    column: 47
                    offset: 47
                leadings: ~
                trailings: ~
              loc:
                start:
                  line: 1
                  column: 45
                  offset: 45
                end:
                  line: 1
                  column: 47
                  offset: 47
              leadings: ~
              trailings: ~
          loc:
            start:
              line: 1
              column: 10
              offset: 10
            end:
              line: 1
              column: 47
              offset: 47
          leadings: ~
          trailings: ~
      loc:
        start:
          line: 1
          column: 8
          offset: 8
        end:
          line: 1
          column: 50
          offset: 50
      leadings: ~
      trailings: ~
    is_readonly: false
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 50
        offset: 50
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 50
    offset: 50
leadings: ~
trailings: ~
