crates/backyard-parser/tests/snapshots/consts__with_type.snap
---
source: crates/backyard-parser/tests/consts.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: class
    inheritance: ~
    name:
      node_type: identifier
      name:
        - 65
      loc:
        start:
          line: 1
          column: 6
          offset: 6
        end:
          line: 1
          column: 7
          offset: 7
      leadings: ~
      trailings: ~
    extends: ~
    implements: []
    body:
      node_type: block
      statements:
        - node_type: const_property
          const_type:
            node_type: union_type
            types:
              - node_type: type
                is_nullable: false
                name:
                  - 115
                  - 116
                  - 114
                  - 105
                  - 110
                  - 103
                loc:
                  start:
                    line: 1
                    column: 16
                    offset: 16
                  end:
                    line: 1
                    column: 22
                    offset: 22
                leadings: ~
                trailings: ~
              - node_type: type
                is_nullable: false
                name:
                  - 105
                  - 110
                  - 116
                loc:
                  start:
                    line: 1
                    column: 23
                    offset: 23
                  end:
                    line: 1
                    column: 26
                    offset: 26
                leadings: ~
                trailings: ~
            loc:
              start:
                line: 1
                column: 16
                offset: 16
              end:
                line: 1
                column: 26
                offset: 26
            leadings: ~
            trailings: ~
          visibilities: []
          items:
            - node_type: assignment
              left:
                node_type: identifier
                name:
                  - 66
                  - 65
                  - 82
                loc:
                  start:
                    line: 1
                    column: 27
                    offset: 27
                  end:
                    line: 1
                    column: 30
                    offset: 30
                leadings: ~
                trailings: ~
              operator:
                - 61
              right:
                node_type: string
                quote: Single
                value:
                  - 98
                  - 97
                  - 114
                loc:
                  start:
                    line: 1
                    column: 33
                    offset: 33
                  end:
                    line: 1
                    column: 33
                    offset: 33
                leadings: ~
                trailings: ~
              loc:
                start:
                  line: 1
                  column: 31
                  offset: 31
                end:
                  line: 1
                  column: 33
                  offset: 33
              leadings: ~
              trailings: ~
          loc:
            start:
              line: 1
              column: 10
              offset: 10
            end:
              line: 1
              column: 33
              offset: 33
          leadings: ~
          trailings: ~
      loc:
        start:
          line: 1
          column: 8
          offset: 8
        end:
          line: 1
          column: 40
          offset: 40
      leadings: ~
      trailings: ~
    is_readonly: false
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 40
        offset: 40
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 40
    offset: 40
leadings: ~
trailings: ~
